<resources>
    <string name="app_name">Simran Singh
        Quality Assurance Manager</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="website">ITC limited</string>
    <string name="home">Home</string>
    <string name="profile">Profile Value</string>
    <string name="nav_support">Support</string>
    <string name="trend_analysis">Trend Analysis</string>
    <string name="logout">Logout</string>
</resources>