<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView

        android:layout_width="110dp"
        android:layout_height="107dp"
        android:src="@drawable/itc_large_rectangle">

    </ImageView>
    <item
        android:id="@+id/nav_home"

        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_trend_analysis"
        android:icon="@drawable/trend_analysis"
        android:title="@string/trend_analysis" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/support"
        android:title="@string/nav_support" />
</menu>